--- a/package/input/if.fn.crossplane.io_inputs.yaml
+++ b/package/input/if.fn.crossplane.io_inputs.yaml
@@ -3,10 +3,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.1
-  name: inputs.template.fn.crossplane.io
+    controller-gen.kubebuilder.io/version: v0.13.0
+  name: inputs.if.fn.crossplane.io
 spec:
-  group: template.fn.crossplane.io
+  group: if.fn.crossplane.io
   names:
     categories:
     - crossplane
@@ -26,9 +26,7 @@ spec:
               of an object. Servers should convert recognized schemas to the latest
               internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
-          example:
-            description: Example is an example field. Replace it with whatever input
-              you need. :)
+          if:
             type: string
           kind:
             description: 'Kind is a string value representing the REST resource this
@@ -37,8 +35,11 @@ spec:
             type: string
           metadata:
             type: object
+          then:
+            type: string
         required:
-        - example
+        - if
+        - then
         type: object
     served: true
     storage: true
