--- a/examples/composition.yaml
+++ b/examples/composition.yaml
@@ -23,7 +23,7 @@ spec:
             region: us-east-2
         ---
         apiVersion: s3.aws.upbound.io/v1beta1
-        kind: Bucket
+        kind: VPC
         spec:
           forProvider:
             region: eu-central-1
