--- a/examples/composition.yaml
+++ b/examples/composition.yaml
@@ -13,17 +13,20 @@ spec:
     functionRef:
       name: function-if
     input:
-      if: spec.env == dev
-      then: |
-        ---
-        apiVersion: s3.aws.upbound.io/v1beta1
-        kind: Bucket
-        spec:
-          forProvider:
-            region: us-east-2
-        ---
-        apiVersion: s3.aws.upbound.io/v1beta1
-        kind: VPC
-        spec:
-          forProvider:
-            region: eu-central-1
+      condition:
+        expr: spec.env == "dev"
+      resources:
+        - name: bucket
+          base:
+            apiVersion: s3.aws.upbound.io/v1beta1
+            kind: Bucket
+            spec:
+              forProvider:
+                region: us-east-2
+        - name: vpc
+          base:
+            apiVersion: s3.aws.upbound.io/v1beta1
+            kind: VPC
+            spec:
+              forProvider:
+                region: eu-central-1
