fix example group version
Signed-off-by: Bulat Shakirzyanov <83289+avalanche123@users.noreply.github.com>

--- a/examples/xr.yaml
+++ b/examples/xr.yaml
@@ -1,5 +1,5 @@
-apiVersion: nopexample.org/v1
-kind: XResource
+apiVersion: nopexample.org/v1alpha1
+kind: XNopResource
 metadata:
   name: test-resource
 spec:
